@@ -1,3 +1,10 @@
+2008-09-12	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* Makefile.am, configure.ac, startup/bspstart.c: Split out
+	bsp_get_work_area() into its own file and user BSP Framework to
+	perform more initialization. Let edb7312 and csb336 shared the
+	implementation.
+
 2008-08-21	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* Makefile.am: No BSP should use exit.c as a file name. exit() is POSIX
